調整媒體專區 class name

--- a/partial/_homepage-header.html.slim
+++ b/partial/_homepage-header.html.slim
@@ -15,7 +15,7 @@
           li: a href="#" 捐款
 
         .menu-bottom
-          a.media-collection href="#" 媒體專區
+          a.press-release href="/press-release/" 媒體專區
           form.search
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
