--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -15,7 +15,7 @@
           = nav_link_to "捐款", "#"
 
         .menu-bottom
-          a.media-collection href="#" 媒體專區
+          a.press-release href="/press-release/" 媒體專區
           form.search
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
