--- a/sass/setup/_layout.scss
+++ b/sass/setup/_layout.scss
@@ -61,7 +61,8 @@ body {
     @include set-container-width;
   }
 
-  &.thin { max-width: 1024px; }
+  &.container_thin { max-width: 1024px; }
+  &.container_post-list { max-width: 768px; }
   &.container_single-article { max-width: 768px; }
   @include at-breakpoint($pad) {
     &.container_single-article { padding: 0 48px; }
