--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -195,7 +195,8 @@ body { background-color: #183840; position: relative; }
   .container:after { content: ""; display: table; clear: both; } }
 @media (min-width: 1025px) { .container { max-width: 1128px; } }
 @media (min-width: 1512px) { .container { max-width: 1512px; } }
-.container.thin { max-width: 1024px; }
+.container.container_thin { max-width: 1024px; }
+.container.container_post-list { max-width: 768px; }
 .container.container_single-article { max-width: 768px; }
 @media (min-width: 640px) { .container.container_single-article { padding: 0 48px; } }
 
@@ -442,8 +443,8 @@ body { background-color: #183840; position: relative; }
 .header .primary-nav a { display: block; color: white; }
 .header .primary-nav a:hover { text-decoration: none; }
 .header .menu-bottom { max-width: 400px; margin: 0 auto; }
-.header .media-collection { display: block; margin: 0px 0 24px; color: #ccc; }
-.header .media-collection:hover { text-decoration: none; }
+.header .press-release { display: block; margin: 0px 0 24px; color: #ccc; }
+.header .press-release:hover { text-decoration: none; }
 .header .search { margin-bottom: 31px; position: relative; display: inline-block; }
 .header .search-icon { display: block; position: absolute; top: 3px; left: 12px; font-size: 16px; line-height: 24px; color: rgba(255, 255, 255, 0.6); }
 .header .search-input { border: none; background-color: rgba(255, 255, 255, 0.25); -webkit-border-radius: 20px; -moz-border-radius: 20px; -ms-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; padding: 3px 6px; text-align: center; color: white; font-size: 13px; line-height: 24px; }
@@ -463,7 +464,7 @@ body { background-color: #183840; position: relative; }
   .header .primary-nav { margin-bottom: 72px; }
   .header .primary-nav li { margin-top: 36px; position: relative; }
   .header .primary-nav a { display: block; }
-  .header .media-collection { display: block; margin: 36px 0 36px; }
+  .header .press-release { display: block; margin: 36px 0 36px; }
   .header .search { margin-bottom: 48px; }
   .header .search-icon { font-size: 20px; line-height: 24px; top: 6px; }
   .header .search-input { border: none; -webkit-border-radius: 24px; -moz-border-radius: 24px; -ms-border-radius: 24px; -o-border-radius: 24px; border-radius: 24px; padding: 6px 12px; font-size: 15px; line-height: 24px; width: 196px; }
@@ -486,8 +487,8 @@ body { background-color: #183840; position: relative; }
   .header .primary-nav .is-active a { color: #50b584; }
   .header .menu-bottom { border-top: none; position: absolute; top: 18px; right: 24px; }
   .header .menu-bottom:after { content: ""; display: table; clear: both; }
-  .header .media-collection { font-size: 15px; line-height: 24px; margin: 0; float: left; color: #999; }
-  .header .media-collection:hover { color: #444; }
+  .header .press-release { font-size: 15px; line-height: 24px; margin: 0; float: left; color: #999; }
+  .header .press-release:hover { color: #444; }
   .header .search { float: left; margin: 0 18px; display: block; }
   .header .search-icon { position: relative; top: 0; left: 0; cursor: pointer; display: block; color: #999; z-index: 110; font-size: 16px; line-height: 24px; }
   .header .search-icon:hover { color: #444; }
@@ -567,39 +568,58 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block:hover .hero-block-title:after { opacity: .95; -webkit-transform: scale(1.6, 1.6); -moz-transform: scale(1.6, 1.6); -ms-transform: scale(1.6, 1.6); -o-transform: scale(1.6, 1.6); transform: scale(1.6, 1.6); }
   .hero .hero-block:hover .hero-block-title .description { max-height: 120px; opacity: 1; } }
 
-.post-list { padding-top: 24px; background-color: #F7F7F7; }
-@media (min-width: 640px) { .post-list { padding-top: 48px; padding-bottom: 48px; } }
+.post-list { margin-top: 24px; }
+.post-list .post-item { display: block; margin-bottom: 24px; }
+.post-list .post-item:after { content: ""; display: table; clear: both; }
+.post-list .post-image { display: block; float: left; position: relative; overflow: hidden; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; width: 60px; height: 0; padding-top: 60px; margin-right: 12px; }
+.post-list .post-meta { display: block; overflow: hidden; font-size: 13px; line-height: 20px; }
+.post-list .post-meta .category { display: inline-block; color: #50b584; }
+.post-list .post-meta .category:hover { text-decoration: none; }
+.post-list .post-meta .date { display: inline-block; color: #aaa; }
+.post-list .post-meta .date:before { content: "|"; margin: 0 6px; }
+.post-list .post-content { display: block; overflow: hidden; }
+.post-list .post-content:hover { text-decoration: none; }
+.post-list .post-title { color: black; font-weight: bold; margin-bottom: 0px; font-size: 15px; line-height: 20px; }
+.post-list .post-summary { display: none; color: #444; margin-bottom: 0px; }
+@media (min-width: 640px) { .post-list { margin-top: 24px; }
+  .post-list .post-image { width: 225px; padding-top: 150px; }
+  .post-list .post-meta { font-size: 15px; line-height: 18px; margin-bottom: 3px; }
+  .post-list .post-title { font-size: 21px; line-height: 24px; margin-bottom: 12px; }
+  .post-list .post-summary { color: #444; display: block; font-size: 15px; line-height: 24px; } }
+@media (min-width: 800px) { .post-list { margin-top: 48px; }
+  .post-list .post-item { margin-bottom: 48px; }
+  .post-list .post-image { width: 270px; padding-top: 180px; margin-right: 24px; }
+  .post-list .post-meta { margin-bottom: 3px; }
+  .post-list .post-title { font-size: 24px; line-height: 30px; margin-bottom: 18px; } }
 
-.post-item { display: block; }
-.post-item:after { content: ""; display: table; clear: both; }
-.post-item .post-image { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; overflow: hidden; margin: 0 -24px; padding-top: 67%; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-.post-item .post-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; margin: -48px -12px 24px; padding: 18px; font-size: 15px; line-height: 24px; color: #444444; background: white; background: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(255, 255, 255, 0.9)), color-stop(60%, #ffffff)); background: -webkit-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: -moz-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: -o-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); }
-.post-item .post-title { font-size: 18px; line-height: 24px; font-weight: bold; }
-.post-item .post-meta { margin-bottom: 12px; font-size: 13px; line-height: 24px; font-weight: bold; }
-.post-item .post-meta .category { display: inline-block; color: #55B36C; }
-.post-item .post-meta .date { display: inline-block; }
-.post-item .post-meta .date:before { content: "/"; margin: 0 6px; }
-.post-item .post-readmore { display: block; margin-top: 12px; text-align: right; font-weight: bold; color: #50b584; letter-spacing: 2px; }
-.post-item:hover { text-decoration: none; }
-.post-item:hover .post-readmore { color: #3e946a; }
-@media (min-width: 700px) { .post-item { margin-bottom: 48px; }
-  .post-item .post-content { padding: 24px; }
-  .post-item .post-title { font-size: 21px; line-height: 24px; margin-bottom: 12px; }
-  .post-item .post-meta { font-size: 15px; line-height: 24px; }
-  .post-item .post-readmore { margin-top: 24px; }
-  .post-item:nth-child(3n+1) .post-image { float: right; width: 60%; margin: 0; padding-top: 40%; }
-  .post-item:nth-child(3n+1) .post-content { float: left; width: 50%; margin: -35% 0 0; }
-  .post-item:nth-child(3n+2) .post-image { float: left; width: 60%; margin: 0; padding-top: 40%; }
-  .post-item:nth-child(3n+2) .post-content { float: right; width: 50%; margin: -35% 0 0; }
-  .post-item:nth-child(3n+3) .post-image { width: 100%; margin: 0; padding-top: 50%; }
-  .post-item:nth-child(3n+3) .post-content { width: 85%; margin: -10% auto 0; } }
-@media (min-width: 1025px) { .post-item { margin-bottom: 48px; }
-  .post-item .post-content { padding: 36px; }
-  .post-item .post-title { font-size: 24px; line-height: 30px; }
-  .post-item:nth-child(3n+1) .post-image { width: 60%; padding-top: 30%; }
-  .post-item:nth-child(3n+1) .post-content { margin: -22.5% 0 0; }
-  .post-item:nth-child(3n+2) .post-image { width: 60%; padding-top: 30%; }
-  .post-item:nth-child(3n+2) .post-content { margin: -22.5% 0 0; } }
+.post-list.post-list_primary { margin-top: 0px; }
+.post-list.post-list_primary .post-image { float: none; margin: 0 -24px; width: auto; padding-top: 67%; }
+.post-list.post-list_primary .post-content-wrap { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; margin: -48px -12px 0; padding: 18px; font-size: 15px; line-height: 24px; color: #444444; background: white; background: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(255, 255, 255, 0.9)), color-stop(60%, #ffffff)); background: -webkit-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: -moz-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: -o-linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, #ffffff 60%); }
+.post-list.post-list_primary .post-title { font-size: 18px; line-height: 24px; font-weight: bold; margin-bottom: 12px; }
+.post-list.post-list_primary .post-summary { display: block; font-size: 15px; line-height: 24px; }
+.post-list.post-list_primary .post-readmore { display: block; margin-top: 12px; text-align: right; font-weight: bold; color: #50b584; letter-spacing: 2px; }
+.post-list.post-list_primary:hover { text-decoration: none; }
+.post-list.post-list_primary:hover .post-readmore { color: #3e946a; }
+@media (min-width: 640px) { .post-list.post-list_primary { margin-top: 24px; }
+  .post-list.post-list_primary .post-content-wrap { padding: 24px; }
+  .post-list.post-list_primary .post-item:nth-child(3n+1) .post-image { float: right; width: 60%; margin: 0; padding-top: 40%; }
+  .post-list.post-list_primary .post-item:nth-child(3n+1) .post-content-wrap { float: left; width: 50%; margin: -35% 0 0; }
+  .post-list.post-list_primary .post-item:nth-child(3n+2) .post-image { float: left; width: 60%; margin: 0; padding-top: 40%; }
+  .post-list.post-list_primary .post-item:nth-child(3n+2) .post-content-wrap { float: right; width: 50%; margin: -35% 0 0; }
+  .post-list.post-list_primary .post-item:nth-child(3n+3) .post-image { width: 100%; margin: 0; padding-top: 50%; }
+  .post-list.post-list_primary .post-item:nth-child(3n+3) .post-content-wrap { width: 85%; margin: -10% auto 0; } }
+@media (min-width: 800px) { .post-list.post-list_primary .post-item { margin-bottom: 24px; }
+  .post-list.post-list_primary .post-title { font-size: 21px; line-height: 28px; margin-bottom: 12px; }
+  .post-list.post-list_primary .post-readmore { margin-top: 24px; } }
+@media (min-width: 1025px) { .post-list.post-list_primary { margin-top: 48px; }
+  .post-list.post-list_primary .post-item { margin-bottom: 48px; }
+  .post-list.post-list_primary .post-content-wrap { padding: 36px; }
+  .post-list.post-list_primary .post-meta { margin-bottom: 3px; }
+  .post-list.post-list_primary .post-title { font-size: 24px; line-height: 30px; }
+  .post-list.post-list_primary .post-item:nth-child(3n+1) .post-image { width: 60%; padding-top: 30%; }
+  .post-list.post-list_primary .post-item:nth-child(3n+1) .post-content-wrap { margin: -22.5% 0 0; }
+  .post-list.post-list_primary .post-item:nth-child(3n+2) .post-image { width: 60%; padding-top: 30%; }
+  .post-list.post-list_primary .post-item:nth-child(3n+2) .post-content-wrap { margin: -22.5% 0 0; } }
 
 @media (min-width: 1025px) { .content { padding-top: 61px; }
   .content.has-sub-menu { padding-top: 110px; } }
