--- a/partial/_post-list.html.slim
+++ b/partial/_post-list.html.slim
@@ -1,13 +1,14 @@
-.post-list.post-list_primary
-  .container.container_thin
-    - 6.times do |i|
-      .post-item
-        a.post-image style="background-image: url('/images/post-1.jpg')" href="/post/single-post-page.html"
-        .post-content-wrap
-          .post-meta
-            a.category href="#" 政策
-            .date 2015.7.22
-          a.post-content href="/post/single-post-page.html"
-            h3.post-title= zh_lorem_sentence
-            p.post-summary 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
-            span.post-readmore 閱讀更多
+.post-list.post-list_block-style
+  .container
+    .post-list-content
+      - 6.times do |i|
+        .post-item
+          a.post-image style="background-image: url('/images/post-1.jpg')" href="/post/single-post-page.html"
+          .post-content-wrap
+            .post-meta
+              a.category href="#"= zh_lorem_words(2)
+              .date 2015.7.22
+            a.post-content href="/post/single-post-page.html"
+              h3.post-title= zh_lorem_sentence
+              p.post-summary 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
+              span.post-readmore 閱讀更多
