小英的故事 -> 小英的人生旅途

--- a/partial/_homepage-header.html.slim
+++ b/partial/_homepage-header.html.slim
@@ -9,8 +9,8 @@
         ul.primary-nav
           li.is-active: a href="/post/" 最新消息
           li: a href="#" 參選宣言
-          li: a href="#" 小英的故事
-          li: a href="#" 願景
+          li: a href="#" 小英的人生旅途
+          / li: a href="#" 願景
           li: a href="#" 加入志工
           li: a href="#" 捐款
 
