--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -9,8 +9,8 @@
         ul.primary-nav
           = nav_link_to "最新消息", "/post/"
           = nav_link_to "參選宣言", "#"
-          = nav_link_to "小英的故事", "#"
-          = nav_link_to "願景", "#"
+          = nav_link_to "小英的人生旅途", "#"
+          / = nav_link_to "願景", "#"
           = nav_link_to "加入志工", "#"
           = nav_link_to "捐款", "#"
 
