--- a/partial/_sub-menu.html.slim
+++ b/partial/_sub-menu.html.slim
@@ -1,7 +1,7 @@
 .sub-menu
   .sub-menu-inner
     ul.sub-menu-list
-      li.menu-item.active: a href="#" 全部
+      li.menu-item: a href="#" 全部
       li.menu-item: a href="#" 政策
       li.menu-item: a href="#" 故事
       li.menu-item: a href="#" 活動
